tools/main_stubs.h

char *strstr(const char *h, const char *n);
typedef void FILE;
int fileno(FILE *f);
int fclose(FILE *f);
int atexit(void (*func)(void));
#define zlen(s) ((ptrdiff_t)strlen(s))
 typedef struct b B;
 typedef struct p P;
 typedef struct window W;
 typedef struct cap CAP;
typedef struct options OPTIONS;
off_t ztoo(const char *s);
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
void msgnw(W *w, const char *s);
extern int opt_mid;