tools/syntax_stubs.h

typedef struct Hash HASH;
typedef struct point P;
typedef struct buffer B;
typedef struct options OPTIONS;
struct point {
	void *link_next;
	void *link_prev;
	B *b;
	char _pad[112 - 24];
};
struct buffer {
	char _pad0[192];
	OPTIONS o;
	char _pad1[632 - 192 - 344];
};
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);
void htrm(HASH *ht);